# app.py
@@ -6,6 +6,7 @@ from dotenv import load_dotenv
 from decimal import Decimal
 import json
 from flask_cors import CORS
+import requests
 
 # Load environment variables from .env file
 load_dotenv()
@@ -50,7 +51,7 @@ def get_all_products():
                 'brand':row[2],
                 'type':row[3],
                 'price': row[4],
-                
+                'amount': row[5]
             }
             products.append(product)
 
@@ -64,6 +65,26 @@ def get_all_products():
         cursor.close()
         connection.close()
 
+@app.route('/get_address', methods=['GET'])
+def get_address():
+    try:
+        # Retrieve the cep from the query parameters
+        cep = request.args.get('cep')
+
+        # make the request
+        response  = requests.get(f'https://viacep.com.br/ws/{cep}/json/')
+
+        if response.status_code == 200:
+            # Format the result as JSON
+            data = response.json()
+            return jsonify(data)
+        else:
+            # Format the result as JSON
+            print(response)
+            return jsonify({'error': 'Failed to fetch address data'})
+    except Exception as e:
+        return jsonify({'error': str(e)})
+
 @app.route('/insert_product', methods=['POST'])
 def insert_product():
     try:
@@ -73,14 +94,15 @@ def insert_product():
         brand = product_data['brand']
         type = product_data['type']
         price = product_data['price']
+        amount = product_data['amount']
 
         # Connect to MySQL database
         connection = mysql.connector.connect(**db_config)
         cursor = connection.cursor()
 
         # Execute query
-        query = 'INSERT INTO products (name, brand, type, price) VALUES (%s, %s,%s,%s)'
-        cursor.execute(query, (name, brand, type, price))
+        query = 'INSERT INTO products (name, brand, type, price, amount) VALUES (%s, %s,%s,%s, %s)'
+        cursor.execute(query, (name, brand, type, price, amount))
         connection.commit()
 
         return jsonify({'message': 'Product inserted successfully'})
@@ -93,12 +115,46 @@ def insert_product():
         cursor.close()
         connection.close()
 
-@app.route('/delete_product', methods=['POST'])
+@app.route('/edit_product', methods=['PUT'])
+def edit_product():
+    try:
+        # Retrieve product data from the request body
+        product_data = request.get_json()
+        id = product_data['id']
+        name = product_data['name']
+        brand = product_data['brand']
+        type = product_data['type']
+        price = product_data['price']
+        amount = product_data['amount']
+
+        # Connect to MySQL database
+        connection = mysql.connector.connect(**db_config)
+        cursor = connection.cursor()
+
+        # Execute query
+        query = '''
+            UPDATE products
+            SET name = %s, brand = %s, type = %s, price = %s, amount = %s
+            WHERE id = %s
+        '''
+        cursor.execute(query, (name, brand, type, price, amount, id))
+        connection.commit()
+
+        return jsonify({'message': 'Product replaced successfully'})
+
+    except mysql.connector.Error as error:
+        return jsonify({'error': str(error)})
+
+    finally:
+        # Close the database connection
+        cursor.close()
+        connection.close()
+
+@app.route('/delete_product', methods=['DELETE'])
 def delete_product():
     try:
-        # Retrieve product ID from the request body
-        product_data = request.get_json()
-        product_id = product_data['id']
+        # Retrieve product ID from the query parameters
+        product_id = request.args.get('id')
 
         # Connect to MySQL database
         connection = mysql.connector.connect(**db_config)
